--- a/demo.ipynb
+++ b/demo.ipynb
@@ -12,23 +12,21 @@
     "from fourlang.text_to_4lang import TextTo4lang\n",
     "from fourlang.lexicon import Lexicon\n",
     "from graphviz import Source\n",
-    "from scripts.parse_data import read\n",
-    "from scripts.similarity import Similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lang = \"it\"\n",
-    "data_frame = read(lang)"
+    "from scripts.parse_data import read"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame = read(\"en\", graded=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,25 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_to_4lang = TextTo4lang(lang=lang)\n",
-    "lexicon = Lexicon(lang=lang)\n",
-    "similarity = Similarity(lang=lang)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_premise = text_to_4lang.process_text(premise, True) #legyen-e expand\n",
-    "graph_hypothesis = text_to_4lang.process_text(hypothesis, True) #legyen-e expand\n",
-    "def_premise = \"\"\n",
-    "def_hypothesis = \"\"\n",
-    "if premise in lexicon.lexicon:\n",
-    "    def_premise = lexicon.lexicon[premise]\n",
-    "if hypothesis in lexicon.lexicon:\n",
-    "    def_hypothesis = lexicon.lexicon[hypothesis]\n"
+    "text_to_4lang_en = TextTo4lang(lang=\"en\")"
    ]
   },
   {
@@ -71,168 +51,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dot_graph_premise = graph_premise.to_dot()\n",
-    "dot_graph_hypothesis = graph_hypothesis.to_dot()"
+    "def asim_jac_nodes(graph_premise, graph_hypothesis):\n",
+    "    prem = set(graph_premise.get_nodes())\n",
+    "    hyp = set(graph_hypothesis.get_nodes())\n",
+    "    sim = hyp & prem\n",
+    "    print(sim)\n",
+    "    if not sim or len(hyp) == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return float(len(sim)) / len(hyp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<graphviz.files.Source at 0x7f7c4f072e80>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "text_to_4lang_en = TextTo4lang(lang=\"en\")\n",
+    "premise = text_to_4lang_en.process_text(\"shelf\", True, 3)\n",
+    "hyp = text_to_4lang_en.process_text(\"closet\",True, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dot_graph_premise = premise.to_dot()\n",
     "Source(dot_graph_premise)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<graphviz.files.Source at 0x7f7c46535908>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Source(dot_graph_hypothesis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 5.5)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity.asim_jac_edges(graph_premise, graph_hypothesis), score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 5.5)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity.asim_jac_nodes(graph_premise, graph_hypothesis), score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.39884697388527846"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity.asim_jac_bow_elmo(def_premise, def_hypothesis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity.asim_jac_words(def_premise, def_hypothesis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.41832485273731"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity.asim_jac_nodes_elmo(premise, hypothesis, graph_premise, graph_hypothesis, def_premise, def_hypothesis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.43056615768027573"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity.asim_jac_edges_elmo(premise, hypothesis, graph_premise, graph_hypothesis, def_premise, def_hypothesis)"
    ]
   },
   {
@@ -259,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
