--- a/demo.ipynb
+++ b/demo.ipynb
@@ -42,12 +42,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_to_4lang_en = TextTo4lang(lang=\"en\")"
+    "text_to_4lang_en = TextTo4lang(lang=\"en\", port=5005)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,26 @@
     "        return 0\n",
     "    else:\n",
     "        return float(len(sim)) / len(hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'any,Any private area, particularly bowers in the open air.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_4lang_en.get_definition(\"closet\")"
    ]
   },
   {
