--- a/demo.ipynb
+++ b/demo.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_to_4lang_en.get_definition(\"antler\")"
+    "text_to_4lang_en.get_definition(\"barracuda\")"
    ]
   },
   {
@@ -78,8 +78,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "premise = text_to_4lang_en.process_text(\"antler\", True, 3)\n",
-    "hyp = text_to_4lang_en.process_text(\"deer\",True, 1)"
+    "hyp = text_to_4lang_en.process_text(\"Five or six and a number\",True, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "premise = text_to_4lang_en.process_text(\"amass\", True, 3)\n",
+    "hyp = text_to_4lang_en.process_text(\"hustle\",True, 1)"
    ]
   },
   {
@@ -90,8 +99,8 @@
    },
    "outputs": [],
    "source": [
-    "dot_graph_premise = premise.to_dot()\n",
-    "Source(dot_graph_premise)"
+    "print(premise.get_nodes())\n",
+    "print(hyp.get_nodes())"
    ]
   },
   {
@@ -150,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
