--- a/baselines.ipynb
+++ b/baselines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frame = read(\"en\", \"de\", graded=False)\n",
+    "data_frame = read(\"en\", graded=False)\n",
     "similarity = Similarity()"
    ]
   },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 446/446 [00:18<00:00, 24.49it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = []\n",
     "\n",
@@ -106,24 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 3/446 [00:03<07:01,  1.05it/s]WARNING:root:skipping dependency not in dep_to_4lang map: det:poss\n",
-      "WARNING:root:skipping dependency not in dep_to_4lang map: expl:impers\n",
-      "  1%|          | 4/446 [00:04<08:30,  1.16s/it]WARNING:root:skipping dependency not in dep_to_4lang map: obl:agent\n",
-      "  2%|▏         | 7/446 [00:07<07:35,  1.04s/it]WARNING:root:skipping dependency not in dep_to_4lang map: det:poss\n",
-      "  4%|▍         | 20/446 [00:21<06:49,  1.04it/s]WARNING:root:skipping dependency not in dep_to_4lang map: expl:pass\n",
-      " 14%|█▍        | 62/446 [01:05<06:53,  1.08s/it]WARNING:root:skipping dependency not in dep_to_4lang map: flat:name\n",
-      " 18%|█▊        | 82/446 [01:28<06:37,  1.09s/it]WARNING:root:skipping dependency not in dep_to_4lang map: flat:foreign\n",
-      "100%|██████████| 446/446 [07:39<00:00,  1.21s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = []\n",
     "\n",
@@ -164,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,17 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 418/418 [00:17<00:00, 23.39it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = []\n",
     "\n",
@@ -235,17 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 316/316 [00:13<00:00, 23.04it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = []\n",
     "\n",
@@ -277,31 +238,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 316/316 [06:55<00:00,  1.34s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def asim_jac_nodes(graph_premise, graph_hypothesis):\n",
+    "    prem = set(graph_premise.get_nodes())\n",
+    "    hyp = set(graph_hypothesis.get_nodes())\n",
+    "    sim = hyp & prem\n",
+    "    if not sim or len(hyp) == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return float(len(sim)) / len(hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_to_4lang_en = TextTo4lang(lang=\"en\")\n",
+    "premise = text_to_4lang_en.process_text(\"shelf\", True, 2)\n",
+    "hyp = text_to_4lang_en.process_text(\"closet\",True, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dot_graph_premise = premise.to_dot()\n",
+    "Source(dot_graph_premise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Source(dot_graph_premise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asim_jac_nodes(premise, hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "premise.filter_graph(\"part\")\n",
+    "asim_jac_nodes(premise, hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_to_4lang_en.get_definition(\"bread\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_to_4lang_en.parser_wrapper.load_from_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "preds = []\n",
     "\n",
+    "for i in tqdm(range(len(data_frame))):\n",
+    "    preds.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = []\n",
+    "preds_graded = []\n",
     "for i in tqdm(range(len(data_frame))):\n",
     "    index = i\n",
     "    premise = data_frame.premise[index]\n",
     "    hypothesis = data_frame.hypothesis[index]\n",
     "    score = data_frame.score[index]\n",
-    "    graph_premise = text_to_4lang.process_text(premise, True) #legyen-e expand\n",
-    "    graph_hypothesis = text_to_4lang.process_text(hypothesis, True)\n",
-    "    dot_graph_premise = graph_premise.to_dot()\n",
-    "    dot_graph_hypothesis = graph_hypothesis.to_dot()\n",
-    "    pred = similarity.asim_jac_nodes(graph_premise, graph_hypothesis)\n",
-    "    if pred > 0:\n",
+    "    graph_premise = text_to_4lang_en.process_text(premise, True, 3) #legyen-e expand\n",
+    "    graph_hypothesis = text_to_4lang_en.process_text(hypothesis, True, 1)\n",
+    "    graph_premise.filter_graph(\"part\")\n",
+    "    graph_premise.filter_graph(\"on\")\n",
+    "    graph_premise.filter_graph(\"use\")\n",
+    "    pred = asim_jac_nodes(graph_premise, graph_hypothesis)\n",
+    "    preds_graded.append(pred)\n",
+    "    if pred == 1.0:\n",
     "        preds.append(1)\n",
     "    else:\n",
     "        preds.append(0)"
@@ -309,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"cross_result_binary_bag\", \"w+\") as f:\n",
+    "with open(\"result_binary_4lang\", \"w+\") as f:\n",
     "    for i,pred in enumerate(preds):\n",
     "        premise = data_frame.premise[i]\n",
     "        hypothesis = data_frame.hypothesis[i]\n",
@@ -322,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,40 +381,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['husband', 'master', 'house', 'householder', 'head', 'family']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "g.get_nodes()"
+    "import json\n",
+    "text_to_4lang_en.parser_wrapper.load_from_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['illness', 'instance', 'disease', 'health', 'poor']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = text_to_4lang.process_text(\"illness\", expand=True)\n",
     "g.get_nodes()"
@@ -372,31 +401,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'person', '.', 'thing', 'number', 'relation'}\n",
-      "{'.', 'walk', 'proceed', ';'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "similarity.asim_jac_words(text_to_4lang.get_definition(\"gang\"), text_to_4lang.get_definition(\"group\"))"
+    "for i in tqdm(range(len(data_frame))):\n",
+    "    index = i\n",
+    "    premise = data_frame.premise[index]\n",
+    "    hypothesis = data_frame.hypothesis[index]\n",
+    "    score = data_frame.score[index]\n",
+    "    if score == 0 and preds[index] == 1:\n",
+    "        print(\"premise: \" + premise + \" \" + \"hyp: \" + hypothesis)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('exp.json', 'w') as fp:\n",
+    "    json.dump(text_to_4lang_en.lexicon.expanded, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
