--- a/baselines.ipynb
+++ b/baselines.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frame = read(\"en\", graded=False)\n",
+    "data_frame = read(\"en\", graded=True)\n",
     "similarity = Similarity()"
    ]
   },
@@ -145,7 +145,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarity.init_dictionaries(\"en\", \"de\")\n",
     "text_to_4lang_en = TextTo4lang(lang=\"en\")\n",
     "text_to_4lang_de = TextTo4lang(lang=\"de\", port=5006)"
    ]
@@ -344,17 +343,17 @@
     "    premise = data_frame.premise[index]\n",
     "    hypothesis = data_frame.hypothesis[index]\n",
     "    score = data_frame.score[index]\n",
-    "    graph_premise = text_to_4lang_en.process_text(premise, True, 3) #legyen-e expand\n",
-    "    graph_hypothesis = text_to_4lang_en.process_text(hypothesis, True, 1)\n",
+    "    graph_premise = text_to_4lang_en.process_text(premise, True, 3, [\"in\", \"of\", \"on\"]) #legyen-e expand\n",
+    "    graph_hypothesis = text_to_4lang_en.process_text(hypothesis, True, 1, [\"in\", \"of\", \"on\"])\n",
     "    graph_premise.filter_graph(\"part\")\n",
     "    graph_premise.filter_graph(\"on\")\n",
     "    graph_premise.filter_graph(\"use\")\n",
     "    pred = asim_jac_nodes(graph_premise, graph_hypothesis)\n",
     "    preds_graded.append(pred)\n",
     "    if pred == 1.0:\n",
-    "        preds.append(1)\n",
+    "        preds.append(1.00)\n",
     "    else:\n",
-    "        preds.append(0)"
+    "        preds.append(0.00)"
    ]
   },
   {
@@ -363,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"result_binary_4lang\", \"w+\") as f:\n",
+    "with open(\"result_graded_en\", \"w+\") as f:\n",
     "    for i,pred in enumerate(preds):\n",
     "        premise = data_frame.premise[i]\n",
     "        hypothesis = data_frame.hypothesis[i]\n",
@@ -386,7 +385,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "text_to_4lang_en.parser_wrapper.load_from_dict()"
+    "text_to_4lang_en.parser_wrapper.save_dict()"
    ]
   },
   {
