--- a/votes.ipynb
+++ b/votes.ipynb
@@ -13,7 +13,6 @@
     "from fourlang.lexicon import Lexicon\n",
     "from graphviz import Source\n",
     "from scripts.parse_data import read\n",
-    "from scripts.check_output import compare_graphs\n",
     "from tqdm import tqdm"
    ]
   },
@@ -23,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frame = read(\"de\", graded=False)"
+    "data_frame = read(\"de\", graded=False)\n",
+    "data_frame"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_to_4lang_en = TextTo4lang(lang=\"de\", port=5006)"
+    "text_to_4lang_en = TextTo4lang(lang=\"en\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "fourlang_votes = []\n",
-    "with open(\"result_binary\", \"r+\") as f:\n",
+    "with open(\"en_result.txt\", \"r+\") as f:\n",
     "    for line in f:\n",
     "        line = line.split()\n",
     "        fourlang_votes.append(line[2])"
@@ -64,7 +64,8 @@
    "outputs": [],
    "source": [
     "text_to_4lang_en = TextTo4lang(lang=\"en\")\n",
-    "text_to_4lang_de = TextTo4lang(lang=\"de\", port=5006)"
+    "text_to_4lang_de = TextTo4lang(lang=\"de\", port=5006)\n",
+    "text_to_4lang_it = TextTo4lang(lang=\"it\", port=5007)"
    ]
   },
   {
@@ -75,10 +76,53 @@
    },
    "outputs": [],
    "source": [
-    "graph_hypothesis = text_to_4lang_de.process_text(\"volleyball\", True, 1, [])\n",
-    "print(text_to_4lang_de.get_definition(\"Pizza\"))\n",
-    "dot_graph_premise = graph_hypothesis.to_dot()\n",
+    "graph_premise = text_to_4lang_en.process_text(data_frame.iloc[154].premise, method=\"expand\", depth=3, blacklist=[\"in\", \"of\", \"on\"]) #legyen-e expand\n",
+    "graph_hypothesis = text_to_4lang_en.process_text(data_frame.iloc[154].hypothesis, method=\"expand\", depth=1, blacklist=[\"in\", \"of\", \"on\"])\n",
+    "dot_graph_premise = graph_premise.to_dot()\n",
     "Source(dot_graph_premise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(asim_jac_nodes_hyp(graph_premise, data_frame.iloc[154].hypothesis))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from networkx import algorithms\n",
+    "def asim_jac_nodes_hyp(graph_premise, hypothesis):\n",
+    "    if hypothesis in graph_premise.get_nodes():\n",
+    "        root_id = [node for node in graph_premise.G.nodes() if clear_node(node) == hypothesis][0]\n",
+    "        graph_premise_only_zero = copy.deepcopy(graph_premise)\n",
+    "\n",
+    "        delete_list = []\n",
+    "\n",
+    "        for edge in graph_premise_only_zero.G.adj.items():\n",
+    "            for output_node in edge[1].items():\n",
+    "                inner_delete_list = []\n",
+    "                for edge_type in output_node[1].items():\n",
+    "                    if edge_type[1][\"color\"]:\n",
+    "                        inner_delete_list.append(edge_type[0])\n",
+    "                for inner_del in inner_delete_list:\n",
+    "                    del output_node[1]._atlas[inner_del]\n",
+    "                if len(output_node[1]) < 1:\n",
+    "                    delete_list.append(output_node[0])\n",
+    "            for to_del in delete_list:\n",
+    "                if to_del in edge[1]._atlas:\n",
+    "                    print(to_del)\n",
+    "                    del edge[1]._atlas[to_del]\n",
+    "        if algorithms.has_path(graph_premise_only_zero.G, graph_premise.root, root_id):\n",
+    "            return 1.0\n",
+    "        else:\n",
+    "            return 0"
    ]
   },
   {
@@ -97,6 +141,23 @@
     "        return 0\n",
     "    else:\n",
     "        return float(len(sim)) / len(hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import copy\n",
+    "def clear_node(node):\n",
+    "    \"\"\"\n",
+    "    Clears the node from the 4lang id parts\n",
+    "    :param node: the text to clear\n",
+    "    :return: the cleared text\n",
+    "    \"\"\"\n",
+    "    return re.sub(r'_[0-9][0-9]*', '', node)"
    ]
   },
   {
@@ -154,13 +215,50 @@
    "source": [
     "preds = []\n",
     "preds_graded = []\n",
-    "for i in range(len(data_frame)):\n",
+    "for i in tqdm(range(len(data_frame))):\n",
     "    index = i\n",
     "    premise = data_frame.premise[index]\n",
     "    hypothesis = data_frame.hypothesis[index]\n",
     "    score = data_frame.score[index]\n",
-    "    graph_premise = text_to_4lang_de.process_text(premise, True, 3, [\"in\", \"auf\"]) #legyen-e expand\n",
-    "    graph_hypothesis = text_to_4lang_de.process_text(hypothesis, True, 1, [], False)\n",
+    "    graph_premise = text_to_4lang_en.process_text(premise, method=\"expand\", depth=3, blacklist=[\"in\", \"of\", \"on\"]) #legyen-e expand\n",
+    "    graph_hypothesis = text_to_4lang_en.process_text(hypothesis, method=\"expand\", depth=1, blacklist=[\"in\", \"of\", \"on\"])\n",
+    "    graph_premise.filter_graph(\"part\")\n",
+    "    #graph_premise.filter_graph(\"on\")\n",
+    "    #graph_premise.filter_graph(\"use\")\n",
+    "    #pred = asim_jac_nodes_hyp(graph_premise, hypothesis)\n",
+    "    pred = asim_jac_nodes(graph_premise, graph_hypothesis)\n",
+    "    if pred == 1.0:\n",
+    "        preds.append(1)\n",
+    "    else:\n",
+    "        preds.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, pred in enumerate(preds_0):\n",
+    "    if preds[i] != pred:\n",
+    "        print(str(i) + \" \" + str(pred) + \" \" + str(preds[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = []\n",
+    "preds_graded = []\n",
+    "for i in tqdm(range(len(data_frame))):\n",
+    "    index = i\n",
+    "    premise = data_frame.premise[index]\n",
+    "    hypothesis = data_frame.hypothesis[index]\n",
+    "    score = data_frame.score[index]\n",
+    "    graph_premise = text_to_4lang_de.process_text(premise, method=\"expand\", depth=3, blacklist=[\"in\", \"auf\"]) #legyen-e expand\n",
+    "    graph_hypothesis = text_to_4lang_de.process_text(hypothesis, method=\"expand\", depth=1, )\n",
     "    pred = asim_jac_nodes(graph_premise, graph_hypothesis)\n",
     "    preds_graded.append(pred)\n",
     "    if pred == 1.0:\n",
@@ -186,8 +284,8 @@
     "    premise = re.sub(\"_\", \" \", premise)\n",
     "    hypothesis = re.sub(\"_\", \" \", hypothesis)\n",
     "    score = data_frame.score[index]\n",
-    "    graph_premise = text_to_4lang_it.process_text(premise, True, 3, [\"di\", \"su\", \"il\"]) #legyen-e expand\n",
-    "    graph_hypothesis = text_to_4lang_it.process_text(hypothesis, True, 1)\n",
+    "    graph_premise = text_to_4lang_it.process_text(premise, method=\"expand\", depth=3, blacklist=[\"di\", \"su\", \"il\"]) #legyen-e expand\n",
+    "    graph_hypothesis = text_to_4lang_it.process_text(hypothesis,method=\"expand\", depth=1)\n",
     "    pred = asim_jac_nodes(graph_premise, graph_hypothesis)\n",
     "    preds_graded.append(pred)\n",
     "    if pred == 1.0:\n",
@@ -228,8 +326,8 @@
     "    hyp_syn_names_all = []\n",
     "    hyper_premise_names_all = []\n",
     "    \n",
-    "    premise_syns = wn.synsets(premise, lang='ita')\n",
-    "    hyp_syns = wn.synsets(hypothesis, lang='ita')\n",
+    "    premise_syns = wn.synsets(premise, lang=\"ita\")\n",
+    "    hyp_syns = wn.synsets(hypothesis, lang=\"ita\")\n",
     "    \"\"\"\n",
     "    if len(premise_syns) > 0 and len(hyp_syns) > 0:\n",
     "        en_premise = premise_syns[0].lemmas()[0].name()\n",
@@ -259,7 +357,7 @@
     "        \n",
     "        hyp_syn_names_all += list(hyp_syn_names)\n",
     "    \n",
-    "    if (set(hyp_syn_names_all) & set(hyper_premise_names_all)) or fourlang_votes[index] == '1':\n",
+    "    if (set(hyp_syn_names_all) & set(hyper_premise_names_all)) or fourlang_votes[index] == 1:\n",
     "        preds.append(1)\n",
     "    else:\n",
     "        if score == 1:\n",
@@ -273,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"result_binary\", \"w+\") as f:\n",
+    "with open(\"result_graded\", \"w+\") as f:\n",
     "    for i,pred in enumerate(preds):\n",
     "        premise = data_frame.premise[i]\n",
     "        hypothesis = data_frame.hypothesis[i]\n",
@@ -286,8 +384,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "older_preds = preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "premise_syns = wn.synsets(\"servierer\", lang='eng')\n",
     "print(premise_syns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import precision_recall_fscore_support\n",
+    "precision_recall_fscore_support(data_frame.score.tolist(), preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, pred in enumerate(preds):\n",
+    "    if pred == 1 and data_frame.iloc[i].score == 1:\n",
+    "        print(data_frame.iloc[i].premise + \"\\t\" + data_frame.iloc[i].hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, premise in enumerate(data_frame.premise):\n",
+    "    defin = text_to_4lang_en.get_definition(premise)\n",
+    "    if defin and \"use\" in defin:\n",
+    "        print(premise + \"\\t\" + data_frame.iloc[i].hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_to_4lang_en.get_definition(\"beef\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, pred in enumerate(preds):\n",
+    "    if preds[i] == 1:\n",
+    "        if pred != data_frame.score.tolist()[i]:\n",
+    "            print(pred)\n",
+    "            print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame.iloc[405]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds.count(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fourlang_votes = preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame"
    ]
   },
   {
