--- a/OdeNetAccess.ipynb
+++ b/OdeNetAccess.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "from xml.etree import ElementTree as ET\n",
     "import random\n",
-    "from random import *\n"
+    "from random import *\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -459,9 +460,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = []\n",
-    "for ind in fourlang_votes:\n",
-    "    preds.append(ind)"
+    "fourlang_votes = []\n",
+    "with open(\"result_graded\", \"r+\") as f:\n",
+    "    for line in f:\n",
+    "        line = line.split()\n",
+    "        fourlang_votes.append(line[2])"
    ]
   },
   {
@@ -503,9 +506,11 @@
     "    \n",
     "    if premise in dictionary:\n",
     "        premise = dictionary[premise]\n",
+    "        #premises.append(premise[0])\n",
     "        premises += premise\n",
     "    if hypothesis in dictionary:\n",
     "        hypothesis = dictionary[hypothesis]\n",
+    "        #hypothesises.append(hypothesis[0])\n",
     "        hypothesises += hypothesis\n",
     "    \n",
     "    for premise in premises:\n",
@@ -542,10 +547,59 @@
     "\n",
     "            hyp_syn_names_all += list(hyp_syn_names)\n",
     "        \n",
-    "    if (set(hyp_syn_names_all) & set(hyper_premise_names_all)) or preds_de[index] == 1 or fourlang_votes[index] == '1':\n",
+    "    if (set(hyp_syn_names_all) & set(hyper_premise_names_all)):# or fourlang_votes[index] == '1':\n",
     "        preds.append(1)\n",
     "    else:\n",
+    "        if score == 1:\n",
+    "            print(premise + \"\\t\" + hypothesis + \"\\t\" + str(index))\n",
     "        preds.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import precision_recall_fscore_support\n",
+    "precision_recall_fscore_support(data_frame.score.tolist(), preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds.count(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame.score.tolist().count(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame"
    ]
   },
   {
