--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,7 +18,7 @@
     "preds = []\n",
     "text_to_4lang = TextTo4lang(lang=\"en\")\n",
     "sherlic_data = read_sherliic(\"data/dev.csv\", ud_path=\"data/relation_index.tsv\", keep_context=True)\n",
-    "sherlic_data_frame = build_graph(data)\n",
+    "sherlic_data_frame = build_graph(sherlic_data)\n",
     "\n",
     "lexicon = Lexicon(lang=\"en\")\n",
     "\n",
@@ -100,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "premise = text_to_4lang.process_text(\"to become greater than something else\", method=\"expand\", depth=1)\n",
+    "premise = text_to_4lang.process_text(\"saxophone\", method=\"expand\", depth=3, blacklist=[\"in\", \"of\", \"on\"])\n",
+    "premise.filter_graph(\"part\")\n",
     "dot_graph_premise = premise.to_dot()\n",
     "Source(dot_graph_premise)"
    ]
@@ -111,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_to_4lang.get_definition(\"surpass\")"
+    "text_to_4lang.get_definition(\"mole\")"
    ]
   },
   {
@@ -161,13 +162,60 @@
     "dot_graph_premise = graph_hypothesis.to_dot()\n",
     "Source(dot_graph_premise)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "premise = text_to_4lang.process_text(\"educate\", method=\"expand\", depth=1)\n",
+    "dot_graph_premise = premise.to_dot()\n",
+    "Source(dot_graph_premise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import stanfordnlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = stanfordnlp.Pipeline() # This sets up a default neural pipeline in English\n",
+    "doc = nlp(\"A material that may be used as food.\")\n",
+    "doc.sentences[0].print_dependencies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbaseconda20617c17c43741ba8ba4c4fe663d3782"
   },
   "language_info": {
    "codemirror_mode": {
@@ -179,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
